added logic Regular_Work_Hours AND recalculation Open Free Hours for user based on regular work hours. AND check blocked dates on server side when user try add request

--- a/application/modules/planner/views/scripts/requests/index.phtml
+++ b/application/modules/planner/views/scripts/requests/index.phtml
@@ -32,7 +32,7 @@ foreach ($this->userRequests[Application_Model_Db_User_Requests::USER_REQUEST_ST
     <span class="param-name">Gebruikt saldo:</span> <span class="use-free-hours"><?php echo $this->me['parameters']['used_free_hours']; ?></span>
 </div>
 <div class="span4">
-    <span class="param-name">Openstaand saldo:</span> <span class="allowed-free-hours"><?php echo $this->me['parameters']['allowed_free_hours']; ?></span>
+    <span class="param-name">Openstaand saldo:</span> <span class="allowed-free-hours"><?php echo $this->me['parameters']['open_free_hours']; ?></span>
 </div>
 
 <div class="span12" id="request-calendar-container">
