--- a/application/modules/planner/views/scripts/planning/_blocks/group_row.phtml
+++ b/application/modules/planner/views/scripts/planning/_blocks/group_row.phtml
@@ -60,7 +60,7 @@
                 </tr>
 
                 <tr class="week-table-header" style="background-color: #<?php echo $this->group['color'];?>">
-                    <th class="week-table-header-task" ><?php echo $this->group['group_name']; ?></th>
+                    <th class="group-user-name" ><?php echo $this->group['group_name']; ?></th>
                     <th class="week-table-header-monday week-table-header-day">Maandag</th>
                     <th class="week-table-header-tuesday week-table-header-day">Dinsdag</th>
                     <th class="week-table-header-wednesday week-table-header-day">Woensdag</th>
