--- a/application/modules/planner/views/scripts/planning/index.phtml
+++ b/application/modules/planner/views/scripts/planning/index.phtml
@@ -13,6 +13,11 @@
     <?php endforeach; ?>
 
 <?php endif; ?>
+<div class="div-row">&nbsp;</div>
+<div class="div-row">&nbsp;</div>
+<div class="div-row">&nbsp;</div>
+<div class="div-row">&nbsp;</div>
+<div class="div-row">&nbsp;</div>
 
 <div class="modal hide fade modal-edit-day">
     <div class="modal-header">
