--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -225,3 +225,5 @@ form.form-mini {
 
 .request-details-status {font-size: 16px; font-weight: bold;}
 .request-details-textarea {width: 510px;}
+
+.group-user-name {width: 35%;}
