--- a/application/modules/planner/views/scripts/requests/index.phtml
+++ b/application/modules/planner/views/scripts/requests/index.phtml
@@ -8,6 +8,7 @@ $openRequestDates     = array();
 $approvedRequestDates = array();
 $rejectedRequestDates = array();
 $usedRequestDates     = array();
+$usedRequestDatesComments = array();
 foreach ($this->userRequests[Application_Model_Db_User_Requests::USER_REQUEST_STATUS_OPEN] as $request) {
     $openRequestDates[] = $request['request_date'];
 };
@@ -18,6 +19,7 @@ foreach ($this->userRequests[Application_Model_Db_User_Requests::USER_REQUEST_ST
     $approvedRequestDates[] = $request['request_date'];
     if ($requestDate->getTimestamp() < time()) { // today is used too . Bug only in 00:00:00 .
         $usedRequestDates[] = $request['request_date'];
+        $usedRequestDatesComments[$request['request_date']] = $request['comment'];
     }
 };
 foreach ($this->userRequests[Application_Model_Db_User_Requests::USER_REQUEST_STATUS_REJECTED] as $request) {
@@ -62,7 +64,17 @@ foreach ($this->userRequests[Application_Model_Db_User_Requests::USER_REQUEST_ST
                 Openstaande aanvragen:
             </td>
             <td>
-                <?php echo implode(', ', $openRequestDates); ?>
+                <?php foreach ($this->userRequests[Application_Model_Db_User_Requests::USER_REQUEST_STATUS_OPEN] as $request) : ?>
+                    <?php if ( ! empty($request['comment'])) : ?>
+                        <div class="show-tooltip editable request-show-comment pull-left" data-original-title="<?php echo $request['comment']; ?>">
+                            <?php echo $request['request_date']; ?>,
+                        </div>
+                        <?php else : ?>
+                        <div class="pull-left">
+                            <?php echo $request['request_date']; ?>,
+                        </div>
+                    <?php endif; ?>
+                <?php endforeach; ?>
             </td>
             <td>
                 <button class="btn show-in-calendar pull-right"
@@ -76,7 +88,17 @@ foreach ($this->userRequests[Application_Model_Db_User_Requests::USER_REQUEST_ST
                 Geaccordeerde aanvragen:
             </td>
             <td>
-                <?php echo implode(', ', $approvedRequestDates); ?>
+                <?php foreach ($this->userRequests[Application_Model_Db_User_Requests::USER_REQUEST_STATUS_APPROVED] as $request) : ?>
+                    <?php if ( ! empty($request['comment'])) : ?>
+                        <div class="show-tooltip editable request-show-comment pull-left" data-original-title="<?php echo $request['comment']; ?>">
+                            <?php echo $request['request_date']; ?>,
+                        </div>
+                        <?php else : ?>
+                        <div class="pull-left">
+                            <?php echo $request['request_date']; ?>,
+                        </div>
+                    <?php endif; ?>
+                <?php endforeach; ?>
             </td>
             <td>
                 <button class="btn show-in-calendar pull-right"
@@ -90,7 +112,17 @@ foreach ($this->userRequests[Application_Model_Db_User_Requests::USER_REQUEST_ST
                 Afgewezen dagen:
             </td>
             <td>
-                <?php echo implode(', ', $rejectedRequestDates); ?>
+                <?php foreach ($this->userRequests[Application_Model_Db_User_Requests::USER_REQUEST_STATUS_REJECTED] as $request) : ?>
+                    <?php if ( ! empty($request['comment'])) : ?>
+                        <div class="show-tooltip editable request-show-comment pull-left" data-original-title="<?php echo $request['comment']; ?>">
+                            <?php echo $request['request_date']; ?>,
+                        </div>
+                    <?php else : ?>
+                        <div class="pull-left">
+                            <?php echo $request['request_date']; ?>,
+                        </div>
+                    <?php endif; ?>
+                <?php endforeach; ?>
             </td>
             <td>
                 <button class="btn show-in-calendar pull-right"
@@ -104,7 +136,18 @@ foreach ($this->userRequests[Application_Model_Db_User_Requests::USER_REQUEST_ST
                 Historische dagen dit jaar:
             </td>
             <td>
-                <?php echo implode(', ', $usedRequestDates); ?>
+                <?php foreach ($usedRequestDates as $request) : ?>
+                    <?php $comment = $usedRequestDatesComments[$request] || ''; ?>
+                    <?php if ( ! empty($comment)) : ?>
+                        <div class="show-tooltip editable request-show-comment pull-left" data-original-title="<?php echo $comment; ?>">
+                            <?php echo $request; ?>,
+                        </div>
+                        <?php else : ?>
+                        <div class="pull-left">
+                            <?php echo $request; ?>,
+                        </div>
+                    <?php endif; ?>
+                <?php endforeach; ?>
             </td>
             <td>
                 <button class="btn show-in-calendar pull-right"
