--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -125,6 +125,11 @@ form.form-mini {
     margin-top: 3px;
     padding: 5px 7px;
 }
+.request-show-comment {
+    cursor: pointer;
+    border-bottom: 1px dashed #808080;
+    margin-right: 8px;
+}
 .requests-table {
     margin-top: 30px;
 }
