--- a/application/modules/planner/views/scripts/planning/_blocks/user_status_field.phtml
+++ b/application/modules/planner/views/scripts/planning/_blocks/user_status_field.phtml
@@ -19,7 +19,7 @@
         'user_id' => $this->userDayData['user_id'],
         'group_id' => $this->userDayData['group_id']
     ), 'planner', true); ?>"
-   class="no-action  <?php if ($this->userDayData['editable']) {echo " edit-day";} ?>"
+   class="no-action  <?php if (@$this->userDayData['editable']) {echo " edit-day";} ?>"
    data-status="<?php echo $this->userDayData['status1']['id']; ?>" >
    <?php if ( empty($this->userDayData['status2'])): ?>
         <?php if ( !empty($this->userDayData['time_start']) && !empty($this->userDayData['time_end'])): ?>
