big refactor Day logic and free/work user time

--- a/application/modules/planner/views/scripts/group-settings/index.phtml
+++ b/application/modules/planner/views/scripts/group-settings/index.phtml
@@ -135,8 +135,8 @@ $maxFreePeopleAction = $this->url(array('controller' => 'group-settings', 'actio
 <div class="span12 normal-user-holidays">
     <div class="input-prepend input-append">
         <span class="add-on">Number of holiday hours based on 100% (40 hours) working week:</span>
-        <input type="text" class="span1 rule-int btn-mini" name="default_open_free_hours" id="default_open_free_hours" value="<?php echo $this->defaultOpenFreeHours; ?>">
-        <button class="btn btn-success btn-no-text save-default-open-free-hours" type="button"><i class="icon-ok icon-white"></i></button>
+        <input type="text" class="span1 rule-int btn-mini" name="default_total_free_hours" id="default_total_free_hours" value="<?php echo $this->defaultTotalFreeHours; ?>">
+        <button class="btn btn-success btn-no-text save-default-total-free-hours" type="button"><i class="icon-ok icon-white"></i></button>
     </div>
 </div>
 
