--- a/application/modules/planner/views/scripts/requests/index.phtml
+++ b/application/modules/planner/views/scripts/requests/index.phtml
@@ -31,10 +31,10 @@ foreach ($this->userRequests[Application_Model_Db_User_Requests::USER_REQUEST_ST
     <?php echo $this->me['full_name']; ?>
 </div>
 <div class="span4">
-    <span class="param-name">Gebruikt saldo:</span> <span class="use-free-hours"><?php echo $this->me['parameters']['used_free_hours']; ?></span>
+    <span class="param-name">Gebruikt saldo:</span> <span class="use-free-hours"><?php echo $this->preUsedFreeHours; ?></span>
 </div>
 <div class="span4">
-    <span class="param-name">Openstaand saldo:</span> <span class="allowed-free-hours"><?php echo $this->me['parameters']['open_free_hours']; ?></span>
+    <span class="param-name">Openstaand saldo:</span> <span class="allowed-free-hours"><?php echo $this->preAllowedFreeHours; ?></span>
 </div>
 
 <div class="span12" id="request-calendar-container">
