--- a/application/modules/planner/views/scripts/planning/_blocks/week_user_plan.phtml
+++ b/application/modules/planner/views/scripts/planning/_blocks/week_user_plan.phtml
@@ -1,8 +1,8 @@
-<?php if ( ! empty($this->user)): ?>
+<?php if ( !empty($this->user)): ?>
 <?php $user = $this->user; ?>
 <tr class="user-row add-user-row" data-user-id="<?php echo $user['user_id']; ?>">
     <td class="user-title" >
-        <div><?php echo "<nobr>" . $user['full_name'] . "</nobr>"; ?> </div>
+        <div class="group-user-name"><?php echo "<nobr>" . $user['full_name'] . "</nobr>"; ?> </div>
     </td>
 
     <?php foreach ($this->weekDays as $weekDay): ?>
